# ToDoList

./: CMakeLists.txt
src/Graph_lib/: Graph.h
src/another_part/: ChangeTaskInfo.cpp  ChangeTaskInfo.h  DayDraw.cpp  DayDraw.h  DayLogic.cpp  DayLogic.h  MyButton.cpp  MyButton.h  PARAMETERS.h  TaskWindow.cpp  TaskWindow.h  main.cpp
src/main/: MainWindow.cpp  MainWindow.h  main.cpp  month.cpp  month.h  year.cpp  year.h
src/new_another_part/: buf.txt  chrono.cpp  chrono.h  compile.bat  main.cpp  old_compile.bat  task_manager.cpp  task_manager.h  task_manager2.cpp  tasks.txt
